# face_det_ncnn_wan

face_det_ncnn/: CMakeLists.txt  detection_suppression.cpp  detection_suppression.h  face_types.h  main.cpp  main_old.cpp
face_det_ncnn/lab/: main.cpp  main_1.cpp
face_det_ncnn/model/face_detection_320_flaten_test_20250801/: face_detection_320_flaten_test_20250801.sim.onnx
face_det_ncnn/model/face_detector_320x320_20260304_t2/: face_detector_320x320_20260304_t2.sim.onnx
face_det_ncnn/model/face_detector_320x320_20260305_1/: face_detector_32x320_20260305_1.onnx  face_detector_32x320_20260305_1.sim.onnx  face_detector_32x320_20260305_1.sim.param
face_det_ncnn/model/old/: flaten_test_20250801.sim.param
